tests/toast-results/Ver_2_Tests-2023-06-21T21:37:40.688Z/FAILED/jt24/jlog.txt
Preprocessing...
Side effect checking enabled
ERROR:
Encountered a parsing failure in parsing pre-processed code:
Line 2, col 1:
  1 | 
> 2 | jdata {
      ^
  3 |     struct {
Expected end of input
Stderr Follows: 



